kubernetes/clusters/my-cluster/apps/spoolman/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spoolman
  labels:
    name: spoolman
