kubernetes/clusters/my-cluster/apps/spoolman/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spoolman-deployment
  namespace: spoolman
  labels:
    app: spoolman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spoolman
  template:
    metadata:
      labels:
        app: spoolman
    spec:
      containers:
      - name: spoolman
        image: ghcr.io/donkie/spoolman:latest
        resources:
          requests:
            memory: "200Mi"
            cpu: "50m"
          limits:
            memory: "500Mi"
            cpu: "250m"
        ports:
        - containerPort: 8000
          name: spoolman-cport
        livenessProbe:
          httpGet:
            path: /api/v1/health  
            port: spoolman-cport
          initialDelaySeconds: 60
          periodSeconds: 10
